--- a/dist.ini
+++ b/dist.ini
@@ -13,7 +13,7 @@ copyright_year   = 2024
 
 [AutoPrereqs]
 [MetaJSON]
-[GitHub::Meta]
+;[GitHub::Meta]
 [Git::NextVersion]
 [MetaProvides::Package]
 
